finished hardCoding the html for add button, show complete description of item, andthe initial page load

--- a/detailedView.html
+++ b/detailedView.html
@@ -34,9 +34,10 @@
       </li>
     <li class="bookmark-item">
       <section class="inner-item">
-        <p>Youtube Rating: 3</p>
-        <p>Visit Site: https://www.youtube.com/freecodecamp/live</p>
-        <p>Description: A wonderfully accurate source of news and culture</p>
+        <p class="item-title">Youtube</p>
+        <p class="item-rating"> Rating: 3</p>
+        <p class="item-URL">Visit Site: https://www.youtube.com/freecodecamp/live</p>
+        <p class="item-Description">Description: A wonderfully accurate source of news and culture</p>
       </section>
     </li>
   </ul>  
