--- a/pageLoadTemplate.html
+++ b/pageLoadTemplate.html
@@ -46,4 +46,12 @@
     ratingsToDisplay: 1,
     addBookmarkModal: false
   }
+  Sample item: {
+    id: cuidahw18sjv1j,
+    name: "YouTube",
+    rating: 4,
+    displayDetail: false,
+    description: 'A wonderfully accurate source of news and Culture'
+}
+-->
 -->
