Added Aria roles to hardcoded html for increased accessibility

--- a/AddBookMark.html
+++ b/AddBookMark.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
   <body>
-    <form action="Get" id="add-bookmark-form">
+    <form action="#" method="GET" id="add-bookmark-form" role="form">
       <label for="add-item-title">Title</label>
       <input type="text" name="add-item-title">
       <label for="add-item-url">URL</label>
