--- a/pageLoadTemplate.html
+++ b/pageLoadTemplate.html
@@ -7,9 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  <button type ="button">Add Bookmark</button>
+  <h1 role="banner">My Bookmarks</h1>
+  <button type="button">Add Bookmark</button>
   <select>
-    <option value="">Rating to Display</option>  
+    <option value="Rating to Display">Rating to Display</option>  
     <option value="1">1</option>
     <option value="2">2</option>
     <option value="3">3</option>
