--- a/functionalApp/index.html
+++ b/functionalApp/index.html
@@ -9,18 +9,22 @@
 </head>
 <body>
   <main role="main">
-    <h1 role="banner">My Bookmarks</h1>
-    <button type ="button" role="button">Add Bookmark</button>
-    <select role="combobox">
-      <option value="">Rating to Display</option>  
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-    </select>
-    <ul role="list" class="js-list">
-    </ul>
+    <div class="total-container">
+      <h1 role="banner" id="my-bookmarks-title">My Bookmarks</h1>
+      <div class="container-button-and-select">
+        <button type="button" role="button" class="add-bookmark-button">Add Bookmark</button>
+        <select role="combobox" class="rating-filter-select">
+        <option value="">Rating to Display</option>  
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        </select>
+      </div>
+      <ul role="list" class="js-list">
+      </ul>
+    </div>
 </main>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
