--- a/functionalApp/index.html
+++ b/functionalApp/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="styles/index.css">
   <title>My Bookmarks</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
       <div class="container-button-and-select">
         <button type="button" role="button" class="add-bookmark-button">Add Bookmark</button>
         <select role="combobox" class="rating-filter-select">
-        <option value="">Rating to Display</option>  
+        <option value="0">Rating to Display</option>  
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
@@ -26,8 +26,10 @@
       </ul>
     </div>
 </main>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src=index.js></script>
+<script src="scripts/store.js"></script>
+<script src="scripts/bookmark.js"></script>
+<script src="scripts/index.js"></script>
 </body>
 </html>
