--- a/functionalApp/index.html
+++ b/functionalApp/index.html
@@ -28,6 +28,7 @@
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="scripts/api.js"></script>
 <script src="scripts/store.js"></script>
 <script src="scripts/bookmark.js"></script>
 <script src="scripts/index.js"></script>
